test/langtools/tools/javac/records/records_cant_be_abstract/RecordsCantBeAbstractTest.java
/*
 * @test /nodynamiccopyright/
 * @summary smoke negative test for datum classes
 * @compile/fail/ref=RecordsCantBeAbstractTest.out -XDrawDiagnostics RecordsCantBeAbstractTest.java
 */

abstract record RecordsCantBeAbstractTest(int i);
